updates: gitignore, refactors, routes and views to use the new frontend and backend asset paths

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,16 @@
+\#*
+*~
+.#*
 .DS_Store
-.idea/
+.idea
+.project
+.sass-cache
+coverage
+Gemfile.lock
+tmp
+nbproject
+pkg
+*.swp
+spec/dummy
+log
+
